--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2070,21 +2070,21 @@
     "count = 1\n",
     "\n",
     "# Changing state variable\n",
-    "# for state in df_train.select(\"state\").distinct().collect():\n",
-    "#     dic_state[state.state] = str(count)\n",
-    "#     count += 1\n",
+    "for state in df_train.select(\"state\").distinct().collect():\n",
+    "    dic_state[state.state] = str(count)\n",
+    "    count += 1\n",
     "\n",
-    "# dic_area_code = {'area_code_408': 1,\n",
-    "#                 'area_code_510': 2,\n",
-    "#                 'area_code_415': 3}\n",
+    "dic_area_code = {'area_code_408': \"1\",\n",
+    "                'area_code_510': \"2\",\n",
+    "                'area_code_415': \"3\"}\n",
     "\n",
-    "# dic_binary = {\"no\": 0,\n",
-    "#              \"yes\": 1}\n",
+    "dic_binary = {\"no\": \"0\",\n",
+    "             \"yes\": \"1\"}\n",
     "\n",
     "# Removing all minutes variables (highly correlated to charge features)\n",
-    "# cols = trainRdd.collect()[0].split(\",\")\n",
-    "# removal_index = [i for i in range(len(cols)) if 'minute' in cols[i]]\n",
-    "# removal_index\n",
+    "cols = trainRdd.collect()[0].split(\",\")\n",
+    "removal_index = [i for i in range(len(cols)) if 'minute' in cols[i]]\n",
+    "removal_index\n",
     "\n",
     "# Function to transform and clean rdd data\n",
     "def cleanRDD(autoStr) :\n",
@@ -2093,88 +2093,61 @@
     "    if isinstance(autoStr, int):\n",
     "        return autoStr\n",
     "    \n",
-    "    \n",
-    "    \n",
     "    # Separate each index with a comma (column separator)\n",
-    "    attList = autoStr.split(\",\")\n",
+    "    attList = autoStr.replace(\"\\\"\",'').split(\",\")\n",
     "    \n",
     "    # Checking if line is the header\n",
     "    if \"state\" not in attList:\n",
-    "    \n",
+    "\n",
     "        # Changing and converting categorical variables to numeric\n",
     "        attList[1] = dic_state[attList[1]]\n",
     "        attList[3] = dic_area_code[attList[3]]\n",
     "        attList[4] = dic_binary[attList[4]]\n",
     "        attList[5] = dic_binary[attList[5]]\n",
     "        attList[20] = dic_binary[attList[20]]\n",
-    "\n",
-    "        # Converting numerical variables to numeric\n",
-    "        attList[2] = pd.to_numeric(attList[2])\n",
-    "        attList[6:20] = list(map(pd.numeric, attList[6:20]))\n",
     "        \n",
     "    # Removing high correlated features and \"id\" variable\n",
     "    count = 0\n",
     "\n",
     "    for i in removal_index:\n",
-    "        del cols_test[i-count]\n",
+    "        del attList[i-count]\n",
     "        count +=1\n",
     "        \n",
-    "    del attList[0]"
+    "    del attList[0]\n",
+    "    return \",\".join(attList)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['\"\"',\n",
-       " '\"state\"',\n",
-       " '\"account_length\"',\n",
-       " '\"area_code\"',\n",
-       " '\"international_plan\"',\n",
-       " '\"voice_mail_plan\"',\n",
-       " '\"number_vmail_messages\"',\n",
-       " '\"total_day_calls\"',\n",
-       " '\"total_day_charge\"',\n",
-       " '\"total_eve_calls\"',\n",
-       " '\"total_eve_charge\"',\n",
-       " '\"total_night_calls\"',\n",
-       " '\"total_night_charge\"',\n",
-       " '\"total_intl_calls\"',\n",
-       " '\"total_intl_charge\"',\n",
-       " '\"number_customer_service_calls\"',\n",
-       " '\"churn\"']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Cleaning train and test datasets\n",
+    "cleanTrainRDD = trainRdd.map(cleanRDD)\n",
+    "cleanTestRDD = testRdd.map(cleanRDD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[7, 10, 13, 16]"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "removal_index"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
