--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -2061,7 +2061,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Removing first line of the file (head)\n",
+    "trainRdd2 = trainRdd.filter(lambda x: \"state\" not in x)\n",
+    "testRdd2 = testRdd.filter(lambda x: \"state\" not in x)\n",
+    "\n",
+    "# Getting clean head\n",
+    "cols = trainRdd.collect()[0].replace(\"\\\"\",'').split(\",\")\n",
+    "cols = [col for col in cols if \"minute\" not in col]\n",
+    "del cols[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2071,20 +2087,25 @@
     "\n",
     "# Changing state variable\n",
     "for state in df_train.select(\"state\").distinct().collect():\n",
-    "    dic_state[state.state] = str(count)\n",
+    "    dic_state[state.state] = count\n",
     "    count += 1\n",
     "\n",
-    "dic_area_code = {'area_code_408': \"1\",\n",
-    "                'area_code_510': \"2\",\n",
-    "                'area_code_415': \"3\"}\n",
+    "dic_area_code = {'area_code_408': 1,\n",
+    "                'area_code_510': 2,\n",
+    "                'area_code_415': 3}\n",
     "\n",
-    "dic_binary = {\"no\": \"0\",\n",
-    "             \"yes\": \"1\"}\n",
+    "dic_binary = {\"no\": 0,\n",
+    "             \"yes\": 1}\n",
     "\n",
     "# Removing all minutes variables (highly correlated to charge features)\n",
-    "cols = trainRdd.collect()[0].split(\",\")\n",
+    "cols = trainRdd.collect()[0].replace(\"\\\"\",'').split(\",\")\n",
+    "\n",
     "removal_index = [i for i in range(len(cols)) if 'minute' in cols[i]]\n",
-    "removal_index\n",
+    "\n",
+    "cols = trainRdd.collect()[0].replace(\"\\\"\",'').split(\",\")\n",
+    "cols = [col for col in cols if \"minute\" not in col]\n",
+    "del cols[0]\n",
+    "\n",
     "\n",
     "# Function to transform and clean rdd data\n",
     "def cleanRDD(autoStr) :\n",
@@ -2096,15 +2117,16 @@
     "    # Separate each index with a comma (column separator)\n",
     "    attList = autoStr.replace(\"\\\"\",'').split(\",\")\n",
     "    \n",
-    "    # Checking if line is the header\n",
-    "    if \"state\" not in attList:\n",
+    "    # Changing and converting categorical variables to numeric\n",
+    "    attList[1] = dic_state[attList[1]]\n",
+    "    attList[3] = dic_area_code[attList[3]]\n",
+    "    attList[4] = dic_binary[attList[4]]\n",
+    "    attList[5] = dic_binary[attList[5]]\n",
+    "    attList[20] = dic_binary[attList[20]]\n",
     "\n",
-    "        # Changing and converting categorical variables to numeric\n",
-    "        attList[1] = dic_state[attList[1]]\n",
-    "        attList[3] = dic_area_code[attList[3]]\n",
-    "        attList[4] = dic_binary[attList[4]]\n",
-    "        attList[5] = dic_binary[attList[5]]\n",
-    "        attList[20] = dic_binary[attList[20]]\n",
+    "    # Converting numeric variable to numeric format\n",
+    "    attList[2] = pd.to_numeric(attList[2])\n",
+    "    attList[6:20] = pd.to_numeric(attList[6:20])\n",
     "        \n",
     "    # Removing high correlated features and \"id\" variable\n",
     "    count = 0\n",
@@ -2114,18 +2136,29 @@
     "        count +=1\n",
     "        \n",
     "    del attList[0]\n",
-    "    return \",\".join(attList)"
+    "        \n",
+    "    # Creating dictionary for store line values\n",
+    "    line_dict = {}\n",
+    "    \n",
+    "    for i in range(len(cols)):\n",
+    "        line_dict[cols[i]] = attList[i]\n",
+    "        \n",
+    "    print(line_dict)\n",
+    "        \n",
+    "    line = Row(**line_dict)\n",
+    "    \n",
+    "    return line"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Cleaning train and test datasets\n",
-    "cleanTrainRDD = trainRdd.map(cleanRDD)\n",
-    "cleanTestRDD = testRdd.map(cleanRDD)"
+    "cleanTrainRDD = trainRdd2.map(cleanRDD)\n",
+    "cleanTestRDD = testRdd2.map(cleanRDD)"
    ]
   },
   {
