--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "from pyspark.sql.window import Window\n",
     "from pyspark.ml.stat import Correlation\n",
     "from pyspark.ml.feature import VectorAssembler\n",
+    "from pyspark.ml.linalg import Vectors\n",
     "\n",
     "from scipy.stats import skew, kurtosis\n",
     "\n",
@@ -39,6 +40,16 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating Spark Session\n",
+    "spSession = SparkSession.builder.master(\"local\").appName(\"local-SparkMLLib\").getOrCreate()"
    ]
   },
   {
@@ -2163,24 +2174,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Converting to a LabeledPoint (target, vector [resources])\n",
+    "def transformVar(row):\n",
+    "    obj = (row[\"churn\"], Vectors.dense([row[col] for col in cols if col != \"churn\"]))\n",
+    "    return obj"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------------------+\n",
+      "|label|            features|\n",
+      "+-----+--------------------+\n",
+      "|    0|[44.0,128.0,3.0,0...|\n",
+      "|    0|[33.0,107.0,3.0,0...|\n",
+      "|    0|[5.0,137.0,3.0,0....|\n",
+      "|    0|[33.0,84.0,1.0,1....|\n",
+      "|    0|[49.0,75.0,3.0,1....|\n",
+      "|    0|[31.0,118.0,2.0,1...|\n",
+      "|    0|[43.0,121.0,2.0,0...|\n",
+      "|    0|[25.0,147.0,3.0,1...|\n",
+      "|    0|[3.0,117.0,1.0,0....|\n",
+      "|    0|[41.0,141.0,3.0,1...|\n",
+      "+-----+--------------------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use RDD, apply the function, convert to Dataframe and apply the select() function\n",
+    "cleanTrainRDD2 = cleanTrainRDD.map(transformaVar)\n",
+    "train_DF = spSession.createDataFrame(cleanTrainRDD2,[\"label\", \"features\"])\n",
+    "train_DF.select(\"label\",\"features\").show(10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 154,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['state',\n",
+       " 'account_length',\n",
+       " 'area_code',\n",
+       " 'international_plan',\n",
+       " 'voice_mail_plan',\n",
+       " 'number_vmail_messages',\n",
+       " 'total_day_calls',\n",
+       " 'total_day_charge',\n",
+       " 'total_eve_calls',\n",
+       " 'total_eve_charge',\n",
+       " 'total_night_calls',\n",
+       " 'total_night_charge',\n",
+       " 'total_intl_calls',\n",
+       " 'total_intl_charge',\n",
+       " 'number_customer_service_calls']"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[col for col in cols if col != \"churn\"]"
+   ]
   },
   {
    "cell_type": "code",
