--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "from pyspark.sql.window import Window\n",
     "from pyspark.ml.stat import Correlation\n",
     "from pyspark.ml.feature import VectorAssembler\n",
+    "from pyspark.ml.feature import PCA\n",
     "from pyspark.ml.linalg import Vectors\n",
     "\n",
     "from scipy.stats import skew, kurtosis\n",
@@ -36,7 +37,8 @@
     "from IPython.display import display\n",
     "from IPython.display import Image\n",
     "\n",
-    "\n",
+    "from pyspark.ml.feature import StandardScaler\n",
+    "from pyspark.ml.feature import MinMaxScaler\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -2056,6 +2058,7 @@
    "metadata": {},
    "source": [
     "## Feature Engineering\n",
+    "### Cleaning sataset\n",
     "In this session, I converted categorical variables to numeric format, removed high correlated features and unnecessary variable."
    ]
   },
@@ -2186,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -2214,43 +2217,42 @@
    ],
    "source": [
     "# Use RDD, apply the function, convert to Dataframe and apply the select() function\n",
+    "# train data\n",
     "cleanTrainRDD2 = cleanTrainRDD.map(transformaVar)\n",
     "train_DF = spSession.createDataFrame(cleanTrainRDD2,[\"label\", \"features\"])\n",
-    "train_DF.select(\"label\",\"features\").show(10)"
+    "train_DF.select(\"label\",\"features\").show(10)\n",
+    "\n",
+    "# test data\n",
+    "cleanTestRDD2 = cleanTestRDD.map(transformaVar)\n",
+    "train_DF = spSession.createDataFrame(cleanTestRDD2,[\"label\", \"features\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['state',\n",
-       " 'account_length',\n",
-       " 'area_code',\n",
-       " 'international_plan',\n",
-       " 'voice_mail_plan',\n",
-       " 'number_vmail_messages',\n",
-       " 'total_day_calls',\n",
-       " 'total_day_charge',\n",
-       " 'total_eve_calls',\n",
-       " 'total_eve_charge',\n",
-       " 'total_night_calls',\n",
-       " 'total_night_charge',\n",
-       " 'total_intl_calls',\n",
-       " 'total_intl_charge',\n",
-       " 'number_customer_service_calls']"
+       "[(0,\n",
+       "  DenseVector([44.0, 128.0, 3.0, 0.0, 1.0, 25.0, 110.0, 45.07, 99.0, 16.78, 91.0, 11.01, 3.0, 2.7, 1.0]))]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[col for col in cols if col != \"churn\"]"
+    "cleanTrainRDD2.take(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying MinMaxScaler to data"
    ]
   },
   {
@@ -2258,7 +2260,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creating\n",
+    "minmax = MinMaxScaler(inputCol=\"features\", outputCol=\"MinMaxScaledFeatures\",\n",
+    "                        withStd=True, withMean=False)\n",
+    "\n",
+    "#Train data\n",
+    "# Compute summary statistics by fitting the StandardScaler\n",
+    "minmaxTrainModel = minmaxScaler.fit(dataFrame)\n",
+    "\n",
+    "# Normalize each feature to have unit standard deviation.\n",
+    "minmaxTrain = minmaxTrainModel.transform(dataFrame)\n",
+    "\n",
+    "#Test data\n",
+    "# Compute summary statistics by fitting the StandardScaler\n",
+    "minmaxTestModel = minmaxScaler.fit(dataFrame)\n",
+    "\n",
+    "# Normalize each feature to have unit standard deviation.\n",
+    "minmaxTest = minmaxTestModel.transform(dataFrame)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying StandardScale to data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler(inputCol=\"features\", outputCol=\"scaledFeatures\",\n",
+    "                        withStd=True, withMean=False)\n",
+    "\n",
+    "# Compute summary statistics by fitting the StandardScaler\n",
+    "scalerModel = scaler.fit(dataFrame)\n",
+    "\n",
+    "# Normalize each feature to have unit standard deviation.\n",
+    "scaledData = scalerModel.transform(dataFrame)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Aplicando Redução de Dimensionalidade com PCA\n",
+    "bankPCA = PCA(k = 3, inputCol = \"features\", outputCol = \"pcaFeatures\")\n",
+    "pcaModel = bankPCA.fit(bankDF)\n",
+    "pcaResult = pcaModel.transform(bankDF).select(\"label\",\"pcaFeatures\")\n",
+    "pcaResult.show(truncate = False)"
+   ]
   }
  ],
  "metadata": {
