--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -2224,28 +2224,7 @@
     "\n",
     "# test data\n",
     "cleanTestRDD2 = cleanTestRDD.map(transformaVar)\n",
-    "train_DF = spSession.createDataFrame(cleanTestRDD2,[\"label\", \"features\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(0,\n",
-       "  DenseVector([44.0, 128.0, 3.0, 0.0, 1.0, 25.0, 110.0, 45.07, 99.0, 16.78, 91.0, 11.01, 3.0, 2.7, 1.0]))]"
-      ]
-     },
-     "execution_count": 175,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cleanTrainRDD2.take(1)"
+    "test_DF = spSession.createDataFrame(cleanTestRDD2,[\"label\", \"features\"])"
    ]
   },
   {
@@ -2257,27 +2236,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception ignored in: <function JavaWrapper.__del__ at 0x7fa1f0fb27b8>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/spark/python/pyspark/ml/wrapper.py\", line 40, in __del__\n",
+      "    if SparkContext._active_spark_context and self._java_obj is not None:\n",
+      "AttributeError: 'MinMaxScaler' object has no attribute '_java_obj'\n"
+     ]
+    }
+   ],
    "source": [
-    "# Creating\n",
-    "minmax = MinMaxScaler(inputCol=\"features\", outputCol=\"MinMaxScaledFeatures\",\n",
-    "                        withStd=True, withMean=False)\n",
+    "# Calling MinMaxScaler function\n",
+    "minmax = MinMaxScaler(inputCol=\"features\", outputCol=\"MinMaxScaledFeatures\")\n",
     "\n",
     "#Train data\n",
     "# Compute summary statistics by fitting the StandardScaler\n",
-    "minmaxTrainModel = minmaxScaler.fit(dataFrame)\n",
+    "minmaxTrainModel = minmax.fit(train_DF)\n",
     "\n",
     "# Normalize each feature to have unit standard deviation.\n",
-    "minmaxTrain = minmaxTrainModel.transform(dataFrame)\n",
+    "minmaxTrain = minmaxTrainModel.transform(train_DF)\n",
     "\n",
     "#Test data\n",
     "# Compute summary statistics by fitting the StandardScaler\n",
-    "minmaxTestModel = minmaxScaler.fit(dataFrame)\n",
+    "minmaxTestModel = minmax.fit(test_DF)\n",
     "\n",
     "# Normalize each feature to have unit standard deviation.\n",
-    "minmaxTest = minmaxTestModel.transform(dataFrame)"
+    "minmaxTest = minmaxTestModel.transform(test_DF)"
    ]
   },
   {
@@ -2289,19 +2279,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calling StandardScaler function\n",
     "scaler = StandardScaler(inputCol=\"features\", outputCol=\"scaledFeatures\",\n",
     "                        withStd=True, withMean=False)\n",
     "\n",
+    "# Train data\n",
     "# Compute summary statistics by fitting the StandardScaler\n",
-    "scalerModel = scaler.fit(dataFrame)\n",
+    "scalerTrainModel = scaler.fit(minmaxTrain)\n",
     "\n",
     "# Normalize each feature to have unit standard deviation.\n",
-    "scaledData = scalerModel.transform(dataFrame)"
+    "scaledData = scalerTrainModel.transform(minmaxTrain)\n",
+    "\n",
+    "# Test data\n",
+    "# Compute summary statistics by fitting the StandardScaler\n",
+    "scalerTestModel = scaler.fit(minmaxTrain)\n",
+    "\n",
+    "# Normalize each feature to have unit standard deviation.\n",
+    "scaledData = scalerTestModel.transform(minmaxTrain)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------------------+--------------------+--------------------+\n",
+      "|label|            features|MinMaxScaledFeatures|      scaledFeatures|\n",
+      "+-----+--------------------+--------------------+--------------------+\n",
+      "|    0|[44.0,128.0,3.0,0...|[0.86,0.524793388...|[3.00366973084306...|\n",
+      "|    0|[33.0,107.0,3.0,0...|[0.64,0.438016528...|[2.2527522981323,...|\n",
+      "|    0|[5.0,137.0,3.0,0....|[0.08,0.561983471...|[0.34132610577762...|\n",
+      "|    0|[33.0,84.0,1.0,1....|[0.64,0.342975206...|[2.2527522981323,...|\n",
+      "|    0|[49.0,75.0,3.0,1....|[0.96,0.305785123...|[3.34499583662068...|\n",
+      "+-----+--------------------+--------------------+--------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaledData.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
