--- a/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
+++ b/Pyspark_version_Predicting_Customer_Churn_in_Telecommunication_Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,9 @@
     "\n",
     "from pyspark.ml.feature import StandardScaler\n",
     "from pyspark.ml.feature import MinMaxScaler\n",
+    "\n",
+    "from pyspark.ml.classification import LogisticRegression\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -2279,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2292,41 +2295,94 @@
     "scalerTrainModel = scaler.fit(minmaxTrain)\n",
     "\n",
     "# Normalize each feature to have unit standard deviation.\n",
-    "scaledData = scalerTrainModel.transform(minmaxTrain)\n",
+    "scaledTrainData = scalerTrainModel.transform(minmaxTrain)\n",
     "\n",
     "# Test data\n",
     "# Compute summary statistics by fitting the StandardScaler\n",
-    "scalerTestModel = scaler.fit(minmaxTrain)\n",
+    "scalerTestModel = scaler.fit(minmaxTest)\n",
     "\n",
     "# Normalize each feature to have unit standard deviation.\n",
-    "scaledData = scalerTestModel.transform(minmaxTrain)"
+    "scaledTestData = scalerTestModel.transform(minmaxTest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training models\n",
+    "To predict Customer Churn, I chose to use Logistic Regression to get information on whether customers are going to cancel their plan and their likelihood.\n",
+    "### Logistic Regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binomial model\n",
+    "lr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8)\n",
+    "\n",
+    "# # Fit binomial model\n",
+    "lrModel = lr.fit(scaledData.select('label', 'features'))\n",
+    "\n",
+    "# Multinomial model\n",
+    "mlr = LogisticRegression(maxIter=10, regParam=0.3, elasticNetParam=0.8, family=\"multinomial\")\n",
+    "\n",
+    "# Fit multinomial model the model\n",
+    "mlrModel = mlr.fit(scaledData.select('label', 'features'))\n",
+    "\n",
+    "# binomial model predictions\n",
+    "binom_predictions = lrModel.transform(scaledTestData.select('label', 'features'))\n",
+    "\n",
+    "# multinomial model predictions\n",
+    "multinom_predictions = mlrModel.transform(scaledTestData.select('label', 'features'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-----+--------------------+--------------------+--------------------+\n",
-      "|label|            features|MinMaxScaledFeatures|      scaledFeatures|\n",
-      "+-----+--------------------+--------------------+--------------------+\n",
-      "|    0|[44.0,128.0,3.0,0...|[0.86,0.524793388...|[3.00366973084306...|\n",
-      "|    0|[33.0,107.0,3.0,0...|[0.64,0.438016528...|[2.2527522981323,...|\n",
-      "|    0|[5.0,137.0,3.0,0....|[0.08,0.561983471...|[0.34132610577762...|\n",
-      "|    0|[33.0,84.0,1.0,1....|[0.64,0.342975206...|[2.2527522981323,...|\n",
-      "|    0|[49.0,75.0,3.0,1....|[0.96,0.305785123...|[3.34499583662068...|\n",
-      "+-----+--------------------+--------------------+--------------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
+      "Test Error for binomial model = 0.134373 \n",
+      "Accuracy for binomial model = 0.865627 \n",
+      "Test Error for multinomial model = 0.134373 \n",
+      "Accuracy for multinomial model = 0.865627 \n"
      ]
     }
    ],
    "source": [
-    "scaledData.show(5)"
+    "# Evaluating models\n",
+    "# Select (prediction, true label) and compute test error\n",
+    "\n",
+    "# Select example rows to display.\n",
+    "# binom_predictions.show(5)\n",
+    "# multinom_predictions.show(5)\n",
+    "\n",
+    "\n",
+    "evaluator = MulticlassClassificationEvaluator(\n",
+    "    labelCol=\"label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
+    "\n",
+    "bin_accuracy = evaluator.evaluate(binom_predictions)\n",
+    "print(\"Test Error for binomial model = %g \" % (1.0 - bin_accuracy))\n",
+    "print(\"Accuracy for binomial model = %g \" % (bin_accuracy))\n",
+    "\n",
+    "mult_accuracy = evaluator.evaluate(multinom_predictions)\n",
+    "print(\"Test Error for multinomial model = %g \" % (1.0 - mult_accuracy))\n",
+    "print(\"Accuracy for multinomial model = %g \" % (mult_accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trying to optimizate model\n",
+    "### Logistic regression optimization\n",
+    "Selecting most important features"
    ]
   },
   {
@@ -2335,13 +2391,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Optimization"
-   ]
   },
   {
    "cell_type": "code",
